SUBDIRS = countries fonts defaults extensions keymaps skin_default rc dealer

dist_pkgdata_DATA = \
	defaultsatlists.xml \
	defaultwizard.xml \
	dreampackagewizard.xml \
	encoding.conf \
	keymap.xml \
	menuorder.bh \
	menu.xml \
	prev.png \
	radio.mvi \
	rcpositions.xml \
	setup.xml \
	skin_default.xml \
	skin.xml \
	startwizard.xml \
	tutorialwizard.xml \
	unicable.xml \
        rc_wb_desc.png
